hphp/hack/test/typecheck/const_attribute/static/abstract/not_in_abstract_class.php.exp
File "not_in_abstract_class.php", line 5, characters 42-43:
Property `$p` is abstract but the class is concrete. Either provide an implementation here. (Typing[4465])
  File "not_in_abstract_class.php", line 4, characters 7-7:
  Or make the class abstract.
File "not_in_abstract_class.php", line 6, characters 30-31:
Property `$l` is abstract but the class is concrete. Either provide an implementation here. (Typing[4465])
  File "not_in_abstract_class.php", line 4, characters 7-7:
  Or make the class abstract.
