hphp/hack/test/typecheck/const_attribute/static/abstract/not_in_abstract_class.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class A {
  <<__Const>> abstract static public int $p;
  abstract static public int $l;
}
